--- a/static/css/book.css
+++ b/static/css/book.css
@@ -58,15 +58,23 @@
     margin-left: 10%;
 
  }
- input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
+ .add_comment {
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-bottom: 5%;
+  box-sizing: border-box;
+
 }
-input[type=submit] {
-  background-color: #4CAF50;
+ .add_comment input[type=text], select, textarea {
+  width:100%;
+  padding: 10px;
+  border: 4px solid #464646;
+  border-radius: 10px;
+  resize: vertical;
+
+}
+.add_comment input[type=submit] {
+  background-color: #2f9e9e;
   color: white;
   padding: 12px 20px;
   border: none;
