--- a/static/css/book.css
+++ b/static/css/book.css
@@ -9,12 +9,24 @@
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     padding-left: 10px;
+    padding: 1%;
+    float: left;
+    margin-left: 2%;
+    border: 2px solid black;
    }
 .detailes{
     text-align: left;
     padding-left: 35px;
 
 }
+.book_info {
+  width: 65%;
+  float: right;
+  padding-left: 2%;
+  margin-right: 2%;
+  margin-top: 1%;
+  /* background-color: rgb(117, 125, 230); */
+}    
 .button {
     display: inline-block;
     padding: 15px 25px;
@@ -86,3 +98,4 @@
 input[type=submit]:hover {
   background-color: #45a049;
 }
+
