--- a/static/css/books.css
+++ b/static/css/books.css
@@ -1,22 +1,220 @@
-.container-fluid{
-    display: flex;
+th{
+    padding: 20px;
+    text-align: left;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    background-color: rgb(110, 110, 114);
+    color: rgb(240, 226, 201);
 }
+
+td {
+    padding: 20px;
+    text-align: left;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+}
+
+.table_data:hover {
+    background-color: rgb(243, 243, 224);
+}
+
+tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+table {
+    /* background-color: rgb(19, 190, 105); */
+    width: 100%;
+    float: left;
+    border: 2px solid black;
+    border-radius: 10px;
+    /* border-radius: 20px; */
+    /* height: 50%;
+    overflow-y: auto; */
+}
+
+/* .heads {
+    position: fixed;
+} */
+
+.search_bar {
+    /* background-color: coral; */
+    float: right;
+    width: 100%;
+    margin-bottom: 2%;
+}
+
+input {
+    width: 78%;
+    border: 1px solid black;
+    padding: 2%;
+    border-radius: 5px;
+    background: #f1f1f1;
+}
+
+.search_button {
+    border-radius: 5px;
+    padding: 2%;
+    background-color: rgb(161, 161, 216);
+    width: 16%;
+    cursor: pointer;
+    border: 1px solid grey;
+}
+
+.no_bk {
+    width: 100%;
+    /* background-color: crimson; */
+    float: left;
+    text-align: center;
+}
+
+#book_name {
+    width: 27%;
+}
+#authors {
+    width: 20%;
+}
+#genre {
+    width: 13%;
+}
+#publi_date {
+    width: 16%;
+}
+#avail {
+    width: 17%;
+}
+
+#clear_search {
+    /* background-color: cyan; */
+    width: 90%;
+    float: left;
+    padding-left: 2%;
+    /* margin: 3%; */
+    /* margin-top: 3%; */
+    /* float: right; */
+    /* width: 100%; */
+}
+
+.or_bet {
+    /* background-color: lightsalmon; */
+    width: 55%;
+    float: left;
+    padding-left: 35%;
+    margin-top: 10%;
+}
+
+.drop_downs {
+    background-color: rgb(228, 226, 222);
+    float: right;
+    width: 98%;
+    margin-top: 10%;
+    padding: 2%;
+    margin-right: 0px;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border-radius: 20px;
+}
+
+select {
+    width: 98%;
+    margin-top: 2%;
+    margin-bottom: 5%;
+}
+
+.filter_but {
+    /* background-color: rgb(59, 248, 59); */
+    margin-left: 35%;
+    /* text-align: center; */
+}
+
+.switch {
+    float: left;
+    /* background-color: lightblue; */
+    width: 75%;
+    padding-left: 25%;
+    margin-bottom: 10%;
+}
+
+.list {
+    /* background-color: rgb(221, 81, 16); */
+    float: left;
+    width: 73%;
+    margin-top: 2%;
+    /* height: 50%;
+    overflow-y: auto; */
+}
+
+.side_bar {
+    /* background-color: lawngreen; */
+    padding: 1%;
+    float: right;
+    width: 24%;
+    /* text-align: right; */
+    /* margin-bottom: 100px; */
+    margin-top: 0.95%;
+    position: fixed;
+    margin-left: 71%;
+}
+
+.container-fluid{
+    /* display: flex; */
+    /* background-color: blue; */
+    margin-bottom: 80%;
+}
+
 .card{
     width: 20%;
-    display: inline-block;
-    box-shadow: 2px 2px 20px black;
+    /* display: inline-block; */
+    box-shadow: 1px 1px 20px black;
+    float: left;
     border-radius: 5px; 
+    width: 25%;
+    height: 350px;
     margin: 2%;
     text-align: center;
     transition: all .3s ease-in-out;
-   }
-   .image img{
+    background-color: rgb(224, 219, 219);
+}
+
+#card_name {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+    /* background-color: blue;    */
+    vertical-align: center;  
+    color: black;       
+}
+
+.image img{
     width: 100%;
-    height: 350px;
+    height: 300px;
     background-size: cover;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-   }
-   .card:hover {
-       transform: scale(1.05); 
-  } 
+}
+
+.card:hover {
+    box-shadow: 10px 10px 20px black; 
+} 
+
+.home_body {
+    width: 97%;
+    margin: 1%;
+}
+
+.switch_b {
+    background-color: rgb(219, 221, 221);
+    color: black;
+    width: 80%;
+    float: right;
+    padding: 2%;
+    margin-right: 25%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    text-align: center;
+    border-radius: 15px;
+}
+.switch_b:hover {
+    background-color: rgb(205, 209, 209);
+}
