--- a/static/css/book.css
+++ b/static/css/book.css
@@ -1,24 +1,34 @@
-.book{
-    display: flex;
-    padding-left: 15px;
-}
-.image img{
-    width: 100%;
-    height: 500px;
-    background-size: cover;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    padding-left: 10px;
-    padding: 1%;
-    float: left;
-    margin-left: 2%;
-    border: 2px solid black;
-   }
-.detailes{
-    text-align: left;
-    padding-left: 35px;
 
+.book_cover {
+  /* background-color: lightsalmon; */
+  width: 25%;
+  padding: 1%;
+  float: left;
+  margin-left: 2%;
+  border: 2px solid black;
 }
+
+.bk_table {
+  /* background-color: coral; */
+  width: 65%;
+  /* margin: 2%; */
+  padding: 1%;
+  float: left;
+}
+
+th{
+  padding: 2%;
+  text-align: right;
+  /* background-color: blue; */
+  width: 30%;
+  vertical-align: top;
+}
+
+td {
+  padding: 2%;
+  text-align: left;
+}
+
 .book_info {
   width: 65%;
   float: right;
@@ -27,34 +37,195 @@
   margin-top: 1%;
   /* background-color: rgb(117, 125, 230); */
 }    
-.button {
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
-  }
-  
-  .button:hover {background-color: #3e8e41}
-  
-  .button:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  }
 
-  .description{
+.book_head {
+  font-size: 270%;
+}
+
+.book_ord {
+  /* background-color: rgb(236, 141, 146); */
+  float: right;
+  width: 65%;
+  padding-top: 1%;
+  padding-left: 2%;
+  margin-right: 2%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.avail_num {
+  color: limegreen; 
+  /* background-color: rgb(36, 46, 12); */
+  width: 20%;
+  float: left;
+  margin-left: 5%;
+  margin-top: 2.5%;
+  margin-bottom: 1.5%;
+}
+
+.no_bks {
+  /* background-color: darkorchid; */
+  width: 30%;
+  margin-left: 8%;
+  margin-top: 2%;
+}
+
+
+.button {
+  /* background-color: brown; */
+  margin-left: 8%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  /* display: inline-block; */
+  float: left;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 120%;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50; /* #4CAF50 */
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 4px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 2px #666;
+  transform: translateY(2px);
+}
+
+b {
+  /* background-color: darkmagenta; */
+  float: left;
+  width: 100%;
+  text-align: left;
+  /* padding-left: 1%; */
+  margin-bottom: 1%;
+}
+
+/* #description{
+  text-align: center;
+  background-color: rgb(235, 238, 238);
+  border-radius: 20px;
+  float: left;
+  width: 95%;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 100px;
+  margin-top: 1%;
+  margin-left: 3%;
+}
+
+#comments {
+  text-align: center;
+  background-color: rgb(235, 238, 238);
+  border-radius: 20px;
+  float: left;
+  width: 95%;
+  margin-top: 1%;
+  margin-left: 3%;
+  margin-bottom: 5%;
+} */
+
+#desc_b {
+  background-color: rgb(219, 221, 221);
+  color: black;
+  width: 12%;
+  float: right;
+  padding: 1.5%;
+  margin-right: 15%;
+  margin-top: 5%;
+  text-align: center;
+  border-radius: 15px;
+}
+#desc_b:hover {
+  background-color: rgb(205, 209, 209);
+}
+
+#rev_b {
+  background-color: rgb(219, 221, 221);
+  color: black;
+  width: 12%;
+  float: right;
+  padding: 1.5%;
+  margin-right: 15%;
+  text-align: center;
+  border-radius: 15px;
+}
+#rev_b:hover {
+  background-color: rgb(205, 209, 209);
+}
+
+#ref_b {
+  background-color: rgb(219, 221, 221);
+  color: black;
+  width: 12%;
+  float: right;
+  padding: 1.5%;
+  margin-right: 15%;
+  text-align: center;
+  border-radius: 15px;
+  margin-top: 1.5%;
+}
+#ref_b:hover {
+  background-color: rgb(205, 209, 209);
+}
+
+#status {
+  margin-left: 8%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  float: left;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 120%;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #e6750b; /* #4CAF50 */
+  border: none;
+  border-radius: 15px;
+  text-transform: uppercase;
+}
+   /* .description{
       text-align: center;
       padding-left: 10px;
       padding-right: 10px;
+      
+  } */
+  .description{
+    text-align: center;
+    background-color: rgb(235, 238, 238);
+    border-radius: 20px;
+    float: left;
+    width: 95%;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20px;
+    margin-top: 3%;
+    margin-left: 3%;
   }
+  .comments {
+    text-align: center;
+    border-radius: 20px;
+    float: left;
+    width: 95%;
+    margin-top: 1%;
+    margin-left: 3%;
+    margin-bottom: 5%;
+  } 
   .row{
     margin: 0px;
     padding: 0px;
@@ -86,7 +257,7 @@
 
 }
 .add_comment input[type=submit] {
-  background-color: #2f9e9e;
+  background-color:#2f9e9e;
   color: white;
   padding: 12px 20px;
   border: none;
