--- a/static/css/book.css
+++ b/static/css/book.css
@@ -218,7 +218,7 @@ b {
     margin-left: 3%;
   }
   .comments {
-    text-align: center;
+    text-align: left;
     border-radius: 20px;
     float: left;
     width: 95%;
@@ -251,13 +251,13 @@ b {
  .add_comment input[type=text], select, textarea {
   width:100%;
   padding: 10px;
-  border: 4px solid #464646;
+  border: 4px solid grey;
   border-radius: 10px;
   resize: vertical;
 
 }
 .add_comment input[type=submit] {
-  background-color:#2f9e9e;
+  background-color: #8FA9B6;
   color: white;
   padding: 12px 20px;
   border: none;
